# python-blockchain

./: .env  compiled_code.json  deploy.py  pyproject.toml
tests/: test_block_py.py
